\name{NEWS}
\title{News for Package \pkg{cerebroApp}}

\section{Changes in version 1.2.0}{
\itemize{
    \item Package submitted to Bioconductor.
    \item New features:
    \itemize{
      \item New button for composition plots (e.g. samples by clusters or cell cycle) that allows to choose whether to scale by actual cell count (default) or percentage.
      \item New button for composition plots that allows to show/hide the respective table of numbers behind them.
      \item New tab "Color management": Users can now change the color assigned to each sample/cluster.
      \item "Gene expression" and "Gene set expression" panels: Users can now pick from a set of color scales and adjust the color range.
      \item The gene selection box in the "Gene expression" panel will now allow to view available genes and select them by clicking. It is not necessary anymore to hit Enter or Space to update the plot, this will be done automatically after providing new input.
      \item It is now possible to export assays other than \texttt{RNA} through the \texttt{assay} parameter in relevant functions.
      \item Launch old Cerebro interfaces through \texttt{version} parameter in \texttt{launchCerebro()}.
      \item We added a vignette which explains how to use cerebroApp and its functions.
    }
    \item Other changes:
    \itemize{
      \item Add citation info.
      \item Composition tables (e.g. samples by clusters or cell cycle) are now calculated in the Shiny app rather than being expected to be present in the \texttt{.crb} file.
      \item Fix log message in \texttt{exportFromSeurat()} when extracting trajectories.
      \item The gene set selection box in the "Gene set expression" tab will not crash anymore when typing a sequence of letters that doesn't match any gene set names.
      \item Remove dependency on pre-assigned colors in the \texttt{.crb} file. If no colors have been assigned to samples and clusters when loading a data set, they will be assigned then.