@@ -1,6 +1,6 @@
 Package: cerebroApp
 Title: Interactive visualization of scRNA-seq data with Cerebro
-Version: 1.2.0
+Version: 1.2.1
 Authors@R:
   person("Roman", "Hillje", email = "roman.hillje@googlemail.com", role = c("aut", "cre"))
 Description: Cerebro is a Shiny application that allows to interactively visualize scRNA-seq data. Data must be exported from a Seurat object using the helper functions which also allows to perform analysis such as pathway enrichment analysis based on marker genes of samples and/or clusters.
