@@ -544,6 +544,7 @@ output[["geneSetExpression_by_sample"]] <- plotly::renderPlotly({
     ),
     yaxis = list(
       title = "Expression level",
+      range = c(0, max(geneSetExpression_plot_data()$level) * 1.2),
       hoverformat=".2f",
       mirror = TRUE,
       showline = TRUE
@@ -599,6 +600,7 @@ output[["geneSetExpression_by_cluster"]] <- plotly::renderPlotly({
     ),
     yaxis = list(
       title = "Expression level",
+      range = c(0, max(geneSetExpression_plot_data()$level) * 1.2),
       hoverformat = ".2f",
       mirror = TRUE,
       showline = TRUE
@@ -658,7 +660,10 @@ output[["geneSetExpression_by_gene"]] <- plotly::renderPlotly({
     expression_levels,
     x = ~gene,
     y = ~expression,
-    text = ~gene,
+    text = ~paste0(
+      expression_levels$gene, ': ',
+      format(expression_levels$expression, digits = 3)
+    ),
     type = "bar",
     marker = list(
       color = ~expression,
