@@ -1,9 +1,17 @@
 \name{NEWS}
 \title{News for Package \pkg{cerebroApp}}
 
+\section{Changes in version 1.2.1}{
+\itemize{
+    \item Small changes:
+    \itemize{
+      \item Scales for expression levels by sample and cluster in "Gene expression" and "Gene set expression" tabs are now set to be from 0 to 1.2 times the highest value. This is to limit the violin plots which cannot be trimed to the actual data range and will extend beyond, giving a false impression of negative values existing in the data.
+      \item Hover info in expression by gene plot in "Gene expression" and "Gene set expression" tabs now show both the gene name and the mean expression value instead of just the gene name.
+    }
+}}
+
 \section{Changes in version 1.2.0}{
 \itemize{
-    \item Package submitted to Bioconductor.
     \item New features:
     \itemize{
       \item New button for composition plots (e.g. samples by clusters or cell cycle) that allows to choose whether to scale by actual cell count (default) or percentage.
